// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Links block renders correctly 1`] = `
<jest>
  <div
    class="bg-light p-3"
  >
    <h5
      class="fs-5 fw-bold pb-2 border-bottom"
    >
      More information
    </h5>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4"
      >
        <a
          class="pb-3 d-inline-block"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4"
      >
        <a
          class="pb-3 d-inline-block"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled me-4"
      >
        <a
          class="pb-3 d-inline-block"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with horizontal 1`] = `
<jest>
  <div
    class="bg-light p-3"
  >
    <h5
      class="fs-5 fw-bold pb-2 border-bottom"
    >
      More information
    </h5>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled d-inline me-4"
      >
        <a
          class="pb-3 d-inline-block"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled d-inline me-4"
      >
        <a
          class="pb-3 d-inline-block"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled d-inline me-4"
      >
        <a
          class="pb-3 d-inline-block"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`OE - Links block renders correctly with transparent background 1`] = `
<jest>
  <div
    class=""
  >
    <h5
      class="fs-5 fw-bold pb-2 border-bottom"
    >
      More information
    </h5>
    <ul
      class="ps-0 mb-0"
    >
      <li
        class="list-unstyled me-4"
      >
        <a
          class="pb-3 d-inline-block"
          href="/example.html"
        >
          European Commission
        </a>
      </li>
      <li
        class="list-unstyled me-4"
      >
        <a
          class="pb-3 d-inline-block"
          href="/example.html"
        >
          Priorities
        </a>
      </li>
      <li
        class="list-unstyled me-4"
      >
        <a
          class="pb-3 d-inline-block"
          href="/example.html"
        >
          Jobs, Growth and Investment
        </a>
      </li>
    </ul>
  </div>
</jest>
`;
